185. Making predictions with our trained model on 25,250 test samples

--- a/06_transfer_learning_in_tensorflow-part3_scaling_up.ipynb
+++ b/06_transfer_learning_in_tensorflow-part3_scaling_up.ipynb
@@ -1482,11 +1482,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vQwbdINZduYn",
-        "outputId": "820d391b-2c0f-4ba7-818e-85b7702ef0e1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vQwbdINZduYn",
+        "outputId": "820d391b-2c0f-4ba7-818e-85b7702ef0e1"
       },
       "source": [
         "# Load in saved model\n",
@@ -1619,11 +1619,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tkagAVrzeSxD",
-        "outputId": "57b592b0-16dd-43da-f37d-baaee9e53e19",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tkagAVrzeSxD",
+        "outputId": "57b592b0-16dd-43da-f37d-baaee9e53e19"
       },
       "source": [
         "model.summary()"
@@ -1659,11 +1659,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UKESgh3JeV-b",
-        "outputId": "54e01b4c-1948-464b-ba7e-692995661ec4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UKESgh3JeV-b",
+        "outputId": "aec58223-4808-4a96-9af2-58a911a0d064"
       },
       "source": [
         "# Evaluate loaded model (the one we just downloaded on test data)\n",
@@ -1671,16 +1671,375 @@
         "results_downloaded_model\n",
         "#[1.6269607543945312, 0.5767524838447571]"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "780/790 [============================>.] - ETA: 1s - loss: 1.8066 - accuracy: 0.6075"
+            "790/790 [==============================] - 91s 116ms/step - loss: 1.8027 - accuracy: 0.6078\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1.8027206659317017, 0.6077623963356018]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9Cpr6Q5jfE6d"
+      },
+      "source": [
+        "## Making a prediction with our trained model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NDDIV-ZMfJvF",
+        "outputId": "88bf84ef-e13d-48c4-bd9a-70a389ebb2d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Make predictions with model\n",
+        "preds_probs = model.predict(test_data, verbose=1) # set verbosity to see how long is left"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "790/790 [==============================] - 64s 80ms/step\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9NieVtZQfr_-",
+        "outputId": "805b37c4-f761-4bd2-da2b-972a948d2307",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "len(test_data), 790*32\n",
+        "# 25250 test images so with  batch size of 32, its 790 batches\n"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(790, 25280)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GIGbDrjLf8XF",
+        "outputId": "e6bb7bd0-2d55-4b10-e027-7f36579c6d13",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# How many predictions are there\n",
+        "len(preds_probs)"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "25250"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "I2rftgURgF-J",
+        "outputId": "9ed825cf-8f93-4c56-f759-acb699dff891",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# What's the shape of our predictions\n",
+        "preds_probs.shape"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(25250, 101)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m5RboeaKgVz9",
+        "outputId": "2356fc66-f9aa-4b2e-d236-fcdd508badd6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Let's see what the first 10 predictions look like\n",
+        "preds_probs[:10]"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[5.95419630e-02, 3.57420549e-06, 4.13768627e-02, ...,\n",
+              "        1.41386836e-09, 8.35306055e-05, 3.08974576e-03],\n",
+              "       [9.64016676e-01, 1.37532974e-09, 8.47805641e-04, ...,\n",
+              "        5.42870948e-05, 7.83623513e-12, 9.84662019e-10],\n",
+              "       [9.59258795e-01, 3.25334659e-05, 1.48669211e-03, ...,\n",
+              "        7.18912077e-07, 5.43970089e-07, 4.02758924e-05],\n",
+              "       ...,\n",
+              "       [4.73132133e-01, 1.29312440e-07, 1.48055772e-03, ...,\n",
+              "        5.97500999e-04, 6.69691508e-05, 2.34693180e-05],\n",
+              "       [4.45718989e-02, 4.72654534e-07, 1.22585356e-01, ...,\n",
+              "        6.34987100e-06, 7.53185486e-06, 3.67787620e-03],\n",
+              "       [7.24389553e-01, 1.92496974e-09, 5.23110393e-05, ...,\n",
+              "        1.22913602e-03, 1.57926827e-09, 9.63956481e-05]], dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UWjM8yE_gkjn",
+        "outputId": "0ac9fb20-ca74-4220-f0c7-382e1d566475",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# What does first prediction probability looks like\n",
+        "len(preds_probs[0]), sum(preds_probs[0]), preds_probs[0]"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(101,\n",
+              " 1.0000000533686695,\n",
+              " array([5.9541963e-02, 3.5742055e-06, 4.1376863e-02, 1.0660557e-09,\n",
+              "        8.1613987e-09, 8.6639833e-09, 8.0926907e-07, 8.5652596e-07,\n",
+              "        1.9859039e-05, 8.0977543e-07, 3.1727809e-09, 9.8673934e-07,\n",
+              "        2.8532193e-04, 7.8049212e-10, 7.4230030e-04, 3.8916420e-05,\n",
+              "        6.4740379e-06, 2.4977307e-06, 3.7891070e-05, 2.0678331e-07,\n",
+              "        1.5538440e-05, 8.1506886e-07, 2.6230471e-06, 2.0010651e-07,\n",
+              "        8.3827223e-07, 5.4216043e-06, 3.7390898e-06, 1.3150561e-08,\n",
+              "        2.7761490e-03, 2.8051842e-05, 6.8562428e-10, 2.5574813e-05,\n",
+              "        1.6688884e-04, 7.6407158e-10, 4.0452692e-04, 1.3150610e-08,\n",
+              "        1.7957364e-06, 1.4448204e-06, 2.3062861e-02, 8.2466562e-07,\n",
+              "        8.5365866e-07, 1.7138565e-06, 7.0525175e-06, 1.8402135e-08,\n",
+              "        2.8553382e-07, 7.9483170e-06, 2.0681537e-06, 1.8525085e-07,\n",
+              "        3.3619713e-08, 3.1522469e-04, 1.0410925e-05, 8.5448295e-07,\n",
+              "        8.4741879e-01, 1.0555427e-05, 4.4094551e-07, 3.7404152e-05,\n",
+              "        3.5306199e-05, 3.2489108e-05, 6.7314752e-05, 1.2852569e-08,\n",
+              "        2.6219663e-10, 1.0318092e-05, 8.5743974e-05, 1.0569887e-06,\n",
+              "        2.1293358e-06, 3.7637521e-05, 7.5972871e-08, 2.5340516e-04,\n",
+              "        9.2905697e-07, 1.2598115e-04, 6.2621671e-06, 1.2458706e-08,\n",
+              "        4.0519542e-05, 6.8727992e-08, 1.2546308e-06, 5.2887295e-08,\n",
+              "        7.5425078e-08, 7.5398224e-05, 7.7540237e-05, 6.4025897e-07,\n",
+              "        9.9033514e-07, 2.2225759e-05, 1.5013852e-05, 1.4038491e-07,\n",
+              "        1.2232512e-05, 1.9044789e-02, 4.9999471e-05, 4.6226141e-06,\n",
+              "        1.5388184e-07, 3.3824006e-07, 3.9228341e-09, 1.6563708e-07,\n",
+              "        8.1321014e-05, 4.8964985e-06, 2.4068308e-07, 2.3124096e-05,\n",
+              "        3.1040623e-04, 3.1379921e-05, 1.4138684e-09, 8.3530605e-05,\n",
+              "        3.0897458e-03], dtype=float32))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "A4_UG2D7g-aY"
+      },
+      "source": [
+        "Our model outputs a prediction probability array(with N number of variables, where N is the number of classes) for each sample passed to the predict method."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eZI_HCWshP4W",
+        "outputId": "0163b4b2-f7df-473d-e267-21c4753905ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# We get one prediction probability per class (in our case there's 101 prediction probability)\n",
+        "print(f\"Number of prediction probabilities for sample 0: {len(preds_probs[0])}\")\n",
+        "print(f\"What prediction probability sample 0 looks like:\\n {preds_probs[0]}\")\n",
+        "print(f\"The class with the highest predicted probability by the model for sample 0 : {preds_probs[0].argmax()}\")"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Number of prediction probabilities for sample 0: 101\n",
+            "What prediction probability sample 0 looks like:\n",
+            " [5.9541963e-02 3.5742055e-06 4.1376863e-02 1.0660557e-09 8.1613987e-09\n",
+            " 8.6639833e-09 8.0926907e-07 8.5652596e-07 1.9859039e-05 8.0977543e-07\n",
+            " 3.1727809e-09 9.8673934e-07 2.8532193e-04 7.8049212e-10 7.4230030e-04\n",
+            " 3.8916420e-05 6.4740379e-06 2.4977307e-06 3.7891070e-05 2.0678331e-07\n",
+            " 1.5538440e-05 8.1506886e-07 2.6230471e-06 2.0010651e-07 8.3827223e-07\n",
+            " 5.4216043e-06 3.7390898e-06 1.3150561e-08 2.7761490e-03 2.8051842e-05\n",
+            " 6.8562428e-10 2.5574813e-05 1.6688884e-04 7.6407158e-10 4.0452692e-04\n",
+            " 1.3150610e-08 1.7957364e-06 1.4448204e-06 2.3062861e-02 8.2466562e-07\n",
+            " 8.5365866e-07 1.7138565e-06 7.0525175e-06 1.8402135e-08 2.8553382e-07\n",
+            " 7.9483170e-06 2.0681537e-06 1.8525085e-07 3.3619713e-08 3.1522469e-04\n",
+            " 1.0410925e-05 8.5448295e-07 8.4741879e-01 1.0555427e-05 4.4094551e-07\n",
+            " 3.7404152e-05 3.5306199e-05 3.2489108e-05 6.7314752e-05 1.2852569e-08\n",
+            " 2.6219663e-10 1.0318092e-05 8.5743974e-05 1.0569887e-06 2.1293358e-06\n",
+            " 3.7637521e-05 7.5972871e-08 2.5340516e-04 9.2905697e-07 1.2598115e-04\n",
+            " 6.2621671e-06 1.2458706e-08 4.0519542e-05 6.8727992e-08 1.2546308e-06\n",
+            " 5.2887295e-08 7.5425078e-08 7.5398224e-05 7.7540237e-05 6.4025897e-07\n",
+            " 9.9033514e-07 2.2225759e-05 1.5013852e-05 1.4038491e-07 1.2232512e-05\n",
+            " 1.9044789e-02 4.9999471e-05 4.6226141e-06 1.5388184e-07 3.3824006e-07\n",
+            " 3.9228341e-09 1.6563708e-07 8.1321014e-05 4.8964985e-06 2.4068308e-07\n",
+            " 2.3124096e-05 3.1040623e-04 3.1379921e-05 1.4138684e-09 8.3530605e-05\n",
+            " 3.0897458e-03]\n",
+            "The class with the highest predicted probability by the model for sample 0 : 52\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6c6XG5ljimjL",
+        "outputId": "2d44dd89-f8f8-40a9-b97a-2f3db2c0cf7f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Get the pred classes of each label\n",
+        "pred_classes = preds_probs.argmax(axis=1)\n",
+        "\n",
+        "# How do they look?\n",
+        "pred_classes[:10]"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([52,  0,  0, 80, 79, 61, 29,  0, 85,  0])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d2mGXec5jGfa",
+        "outputId": "1f619022-dc18-4e9a-a06e-444d2d55c773",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# How many pred classes do we have ?\n",
+        "len(pred_classes)"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "25250"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mipPpWHKjKvx"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
