--- a/06_transfer_learning_in_tensorflow-part3_scaling_up.ipynb
+++ b/06_transfer_learning_in_tensorflow-part3_scaling_up.ipynb
@@ -2042,11 +2042,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QAEsVbsM5qxL",
-        "outputId": "78836abd-6cec-4a90-8f4a-2ecc1a060190",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QAEsVbsM5qxL",
+        "outputId": "78836abd-6cec-4a90-8f4a-2ecc1a060190"
       },
       "source": [
         "# to get our test labels we need to unravel our test_data BatchDataset\n",
@@ -2077,11 +2077,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SA2qVUTN6jjh",
-        "outputId": "12e0c942-85d9-47d2-e899-dd6296945387",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SA2qVUTN6jjh",
+        "outputId": "12e0c942-85d9-47d2-e899-dd6296945387"
       },
       "source": [
         "# How many y_labels are there?\n",
@@ -2127,11 +2127,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9z5uibQn7oY_",
-        "outputId": "63379f5b-fb18-4127-c4f0-49f3b0e8e4d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9z5uibQn7oY_",
+        "outputId": "63379f5b-fb18-4127-c4f0-49f3b0e8e4d4"
       },
       "source": [
         "results_downloaded_model"
@@ -2155,11 +2155,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fO1WTMQR744O",
-        "outputId": "a9e027ce-4e3a-41eb-c1c1-6adcbad8ebc4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fO1WTMQR744O",
+        "outputId": "a9e027ce-4e3a-41eb-c1c1-6adcbad8ebc4"
       },
       "source": [
         "# Let's try scikit-learn accuracy score function and see what is comes up with\n",
@@ -2188,11 +2188,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RYk06JoP9K8K",
-        "outputId": "dcfa2a6e-2b13-404a-b95b-f7a8f50f7fa5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RYk06JoP9K8K",
+        "outputId": "dcfa2a6e-2b13-404a-b95b-f7a8f50f7fa5"
       },
       "source": [
         "# Does this metric come close to our model's evaluate results\n",
@@ -2217,12 +2217,168 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "VDMT6Pe79wpX"
       },
       "source": [
-        ""
+        "## Let's get visual: Making a confusion matrix"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5ti7eHiR-EUT"
+      },
+      "source": [
+        "from helper_functions import make_confusion_matrix"
+      ],
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i_xC5BW0-gmN",
+        "outputId": "5d35387f-3c10-408c-9628-4ae0cac477cc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Get list of class names\n",
+        "class_names = test_data.class_names\n",
+        "class_names[:10]"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['apple_pie',\n",
+              " 'baby_back_ribs',\n",
+              " 'baklava',\n",
+              " 'beef_carpaccio',\n",
+              " 'beef_tartare',\n",
+              " 'beet_salad',\n",
+              " 'beignets',\n",
+              " 'bibimbap',\n",
+              " 'bread_pudding',\n",
+              " 'breakfast_burrito']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Z8AOoZrf_yae"
+      },
+      "source": [
+        "# We need to make some changes to our make_confusion_matrix to ensure the x-labels print vertically\n",
+        "from sklearn.metrics import confusion_matrix\n",
+        "import matplotlib.pyplot as plt\n",
+        "import itertools\n",
+        "import numpy as np\n",
+        "\n",
+        "def make_confusion_matrix(y_true, y_pred, classes=None, figsize=(10, 10), text_size=15, norm=False, savefig=False): \n",
+        "  \"\"\"Makes a labelled confusion matrix comparing predictions and ground truth labels.\n",
+        "\n",
+        "  If classes is passed, confusion matrix will be labelled, if not, integer class values\n",
+        "  will be used.\n",
+        "\n",
+        "  Args:\n",
+        "    y_true: Array of truth labels (must be same shape as y_pred).\n",
+        "    y_pred: Array of predicted labels (must be same shape as y_true).\n",
+        "    classes: Array of class labels (e.g. string form). If `None`, integer labels are used.\n",
+        "    figsize: Size of output figure (default=(10, 10)).\n",
+        "    text_size: Size of output figure text (default=15).\n",
+        "    norm: normalize values or not (default=False).\n",
+        "    savefig: save confusion matrix to file (default=False).\n",
+        "  \n",
+        "  Returns:\n",
+        "    A labelled confusion matrix plot comparing y_true and y_pred.\n",
+        "\n",
+        "  Example usage:\n",
+        "    make_confusion_matrix(y_true=test_labels, # ground truth test labels\n",
+        "                          y_pred=y_preds, # predicted labels\n",
+        "                          classes=class_names, # array of class label names\n",
+        "                          figsize=(15, 15),\n",
+        "                          text_size=10)\n",
+        "  \"\"\"  \n",
+        "  # Create the confustion matrix\n",
+        "  cm = confusion_matrix(y_true, y_pred)\n",
+        "  cm_norm = cm.astype(\"float\") / cm.sum(axis=1)[:, np.newaxis] # normalize it\n",
+        "  n_classes = cm.shape[0] # find the number of classes we're dealing with\n",
+        "\n",
+        "  # Plot the figure and make it pretty\n",
+        "  fig, ax = plt.subplots(figsize=figsize)\n",
+        "  cax = ax.matshow(cm, cmap=plt.cm.Blues) # colors will represent how 'correct' a class is, darker == better\n",
+        "  fig.colorbar(cax)\n",
+        "\n",
+        "  # Are there a list of classes?\n",
+        "  if classes:\n",
+        "    labels = classes\n",
+        "  else:\n",
+        "    labels = np.arange(cm.shape[0])\n",
+        "  \n",
+        "  # Label the axes\n",
+        "  ax.set(title=\"Confusion Matrix\",\n",
+        "         xlabel=\"Predicted label\",\n",
+        "         ylabel=\"True label\",\n",
+        "         xticks=np.arange(n_classes), # create enough axis slots for each class\n",
+        "         yticks=np.arange(n_classes), \n",
+        "         xticklabels=labels, # axes will labeled with class names (if they exist) or ints\n",
+        "         yticklabels=labels)\n",
+        "  \n",
+        "  # Make x-axis labels appear on bottom\n",
+        "  ax.xaxis.set_label_position(\"bottom\")\n",
+        "  ax.xaxis.tick_bottom()\n",
+        "\n",
+        "  ### Changed (plot x-labels vertically) ###\n",
+        "  plt.xticks(rotation=70, fontsize=text_size)\n",
+        "  plt.yticks(fontsize=text_size)\n",
+        "\n",
+        "  # Set the threshold for different colors\n",
+        "  threshold = (cm.max() + cm.min()) / 2.\n",
+        "\n",
+        "  # Plot the text on each cell\n",
+        "  for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
+        "    if norm:\n",
+        "      plt.text(j, i, f\"{cm[i, j]} ({cm_norm[i, j]*100:.1f}%)\",\n",
+        "              horizontalalignment=\"center\",\n",
+        "              color=\"white\" if cm[i, j] > threshold else \"black\",\n",
+        "              size=text_size)\n",
+        "    else:\n",
+        "      plt.text(j, i, f\"{cm[i, j]}\",\n",
+        "              horizontalalignment=\"center\",\n",
+        "              color=\"white\" if cm[i, j] > threshold else \"black\",\n",
+        "              size=text_size)\n",
+        "\n",
+        "  # Save the figure to the current working directory\n",
+        "  if savefig:\n",
+        "    fig.savefig(\"confusion_matrix.png\")"
+      ],
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bZI5WU3j-TMd"
+      },
+      "source": [
+        "make_confusion_matrix(y_true=y_labels,\n",
+        "                      y_pred = pred_classes,\n",
+        "                      classes=class_names,\n",
+        "                      figsize=(100, 100),\n",
+        "                      text_size=20)"
       ],
       "execution_count": null,
       "outputs": []
