191. Creating a function to load and prepare images for making predictions

--- a/06_transfer_learning_in_tensorflow-part3_scaling_up.ipynb
+++ b/06_transfer_learning_in_tensorflow-part3_scaling_up.ipynb
@@ -1395,11 +1395,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "-WuRanr4_qio",
-        "outputId": "ac189f28-c8d2-4ec9-c583-86d8dfb44b22",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 180
-        }
+        },
+        "outputId": "ac189f28-c8d2-4ec9-c583-86d8dfb44b22"
       },
       "source": [
         "# The results from our loaded model(above) should be very similar to the results below\n",
@@ -3404,11 +3404,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "bCzOqKOswqKy",
-        "outputId": "b202f01f-e0f2-42a0-be3d-35a863786f2e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "394b60b9-7400-431d-d51e-f5ab6fd78559"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -3424,7 +3424,7 @@
         "# Challenge: add values to the end of each bar of what the actual f1-score is \n",
         "# (hint : use the \"autolabel\" function from here : https://matplotlib.org/2.0.2/examples/api/barchart_demo.html)\n"
       ],
-      "execution_count": 49,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3442,12 +3442,81 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "R6iAqN4tNkBC"
       },
       "source": [
-        ""
+        "> **Exercise** :  Try visualizing some of the most poorly predicted classes(e.g. `apple_pie, pork_chop`), do you notice any trends among them? Why might our model be having trouble with them?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xzz42US6O9iy"
+      },
+      "source": [
+        "## Visualizing predictions on custom images\n",
+        "\n",
+        "Now this is the real test, how does our model goes on food images not even in our dataset(images of our own).\n",
+        "\n",
+        "To visualize our model's predictions on our own images, we'll need a function to load and preprocess images, specifically it will need to :\n",
+        "* Read in a target image filepath using tf.io.read_file()\n",
+        "* Turn the image into a Tensor using tf.io.decode_image()\n",
+        "* Resize the image tensor to be the same size as the images our model has trained on using tf.image.resize()\n",
+        "* Scale the image to get all of the pixel values between 0 & 1 (if necessary)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ueQRK8rpQCB9"
+      },
+      "source": [
+        "# Create a function to load and prepare images\n",
+        "\n",
+        "def load_and_prep_image(filename, img_shape=224, scale=True) :\n",
+        "  \"\"\"\n",
+        "  Reads in an image from filenae, turns it into a tensor and reshapes into specified shape\n",
+        "  (img_shape, img_shape, color_channels = 3).\n",
+        "\n",
+        "  Args:\n",
+        "    filename (str) : path to target image\n",
+        "    image_shape(int) : height/width dimension of target image size\n",
+        "    scale(bool) : scale pixel values from 0-255 to 0-1 or not\n",
+        "  \n",
+        "  Returns :\n",
+        "    Image tensor of shape(img_shape, img_shape, 3)\n",
+        "  \"\"\"\n",
+        "\n",
+        "  # Read in the image\n",
+        "  img = tf.io.read_file(filename)\n",
+        "\n",
+        "  # decode image into tensor\n",
+        "  img = tf.io.decode_image(img, channels = 3)\n",
+        "\n",
+        "  # Resize the image\n",
+        "  img = tf.image.resize(img, [img_shape, img_shape])\n",
+        "\n",
+        "  # Scale ? Yes/no\n",
+        "  if scale :\n",
+        "    # rescale the image (get all values between 0 and 1)\n",
+        "    return img/255.\n",
+        "  else :\n",
+        "    return img # don't need to rescale images for EfficientNet models in TensorFlow\n",
+        "\n",
+        "  \n"
+      ],
+      "execution_count": 51,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yTWkzw9EPaOx"
+      },
+      "source": [
+        "# Get our custom image\n"
       ],
       "execution_count": null,
       "outputs": []
