200. Getting helper functions ready

--- a/07_milestone_proj_1_food_vision_big.ipynb
+++ b/07_milestone_proj_1_food_vision_big.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "07_milestone_proj_1_food_vision_big",
       "provenance": [],
-      "authorship_tag": "ABX9TyPkY/eH3mqOssKUvXukBqBs",
+      "authorship_tag": "ABX9TyNZ/Kc2Gze91i8pZ2zMkNbR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,12 +65,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W4f0cU0pmRaa",
-        "outputId": "bd9dfe60-b74b-4497-aae3-7faa6eadab78"
+        "outputId": "d7829cf0-3c44-476b-e282-6ce2be5d32e3"
       },
       "source": [
         "! nvidia-smi -L"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,9 +82,69 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "rKA6rwCCp0BL"
+      },
+      "source": [
+        "## Get helper functions\n",
+        " In past modules, we've created a bunch of helper functions to do small tasks required for notebooks.\n",
+        "\n",
+        " Rather than rewrite all of these, we can import a script and load them in from there.\n",
+        " The script we've got available can be found on GitHub :\n",
+        " https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/helper_functions.py"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HiIuIdR6soQh",
+        "outputId": "6203a0a7-be19-4f35-d898-ec083fe2434d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Download helper functions script\n",
+        "!wget https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/helper_functions.py"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2021-07-30 04:36:17--  https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/helper_functions.py\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.108.133, 185.199.111.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 10246 (10K) [text/plain]\n",
+            "Saving to: ‘helper_functions.py’\n",
+            "\n",
+            "\rhelper_functions.py   0%[                    ]       0  --.-KB/s               \rhelper_functions.py 100%[===================>]  10.01K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2021-07-30 04:36:17 (94.3 MB/s) - ‘helper_functions.py’ saved [10246/10246]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "D17SON3HstLw"
+      },
+      "source": [
+        "# Import series of helper functions for the notebook\n",
+        "from helper_functions import create_tensorboard_callback, plot_loss_curves, compare_historys"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BI8Jwm2qs9Kr"
       },
       "source": [
         ""
