--- a/07_milestone_proj_1_food_vision_big.ipynb
+++ b/07_milestone_proj_1_food_vision_big.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "07_milestone_proj_1_food_vision_big",
       "provenance": [],
-      "authorship_tag": "ABX9TyO5go9O0HgZS3rbfw5RmarU",
+      "authorship_tag": "ABX9TyM72jbNvQSae1PLtbbZPQxb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -256,11 +256,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "evg_ElgiiepH",
-        "outputId": "59d30f16-7107-47af-bd2b-b68002c787a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "evg_ElgiiepH",
+        "outputId": "59d30f16-7107-47af-bd2b-b68002c787a3"
       },
       "source": [
         "# Get the class names\n",
@@ -399,11 +399,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4LSRMz9TkLNY",
-        "outputId": "120a9768-3ac5-4414-fa90-74b4bfb22a5d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4LSRMz9TkLNY",
+        "outputId": "120a9768-3ac5-4414-fa90-74b4bfb22a5d"
       },
       "source": [
         "# What does one sample of our training data look like ?\n",
@@ -428,11 +428,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "di-rtE8skdsA",
-        "outputId": "32a303dc-f5b4-4c8b-dcdd-57b62e018a64",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "di-rtE8skdsA",
+        "outputId": "32a303dc-f5b4-4c8b-dcdd-57b62e018a64"
       },
       "source": [
         "# Output info about our training sample\n",
@@ -463,11 +463,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sjfSPIRml06w",
-        "outputId": "d13a32f8-8b4a-4372-d768-381d579c46af",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sjfSPIRml06w",
+        "outputId": "d13a32f8-8b4a-4372-d768-381d579c46af"
       },
       "source": [
         "# What does our image tensor from TFDS's Food101 look like?\n",
@@ -541,11 +541,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "u-z1mY-XmJre",
-        "outputId": "072bbae7-246e-4603-e61d-3c394f2fcc53",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "u-z1mY-XmJre",
+        "outputId": "072bbae7-246e-4603-e61d-3c394f2fcc53"
       },
       "source": [
         "# What are the min and max values of our image tensor?\n",
@@ -582,12 +582,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Eb8rrX4Emk7N",
-        "outputId": "33655c65-86fc-451a-b75b-09323dd39d11",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 264
-        }
+        },
+        "id": "Eb8rrX4Emk7N",
+        "outputId": "33655c65-86fc-451a-b75b-09323dd39d11"
       },
       "source": [
         "# Plot an image tensor\n",
@@ -616,9 +616,45 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "gl3xRuz2oDId"
+      },
+      "source": [
+        "## Create preprocessing functions for our data\n",
+        "\n",
+        "Neural networks perform best when data is in a certain way (e.g. batched, normalized, etc).\n",
+        "However, not all data(including data from TensorFlow Datasets) come like this.\n",
+        "So in order to get it ready for a neural network, you'll often have to write preprocessing fuctions and map it to your data.\n",
+        "\n",
+        "What we know about our data:\n",
+        "* In `uint8` datatype\n",
+        "* Comprised of all different size tensors (different sized images)\n",
+        "* Not scaled ( the pixel values are between 0 & 255)\n",
+        "\n",
+        "What we know models like :\n",
+        "* Data in `float32` dtype (or for mixed precision `float16` and `float32`)\n",
+        "* For batches, TensorFlow like all of the tensors within a batch to be of the same size\n",
+        "* Scaled (values between 0 & 1) also called normalized tensors generally perform better.\n",
+        "\n",
+        "With these points in mind, we've got a few things we can tackle with a preprocessing function."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6oQaAA78qY5g"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bd-NHfOJo-FW"
       },
       "source": [
         ""
