203. Creating a preprocessing function to prepare our data for modelling

--- a/07_milestone_proj_1_food_vision_big.ipynb
+++ b/07_milestone_proj_1_food_vision_big.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "07_milestone_proj_1_food_vision_big",
       "provenance": [],
-      "authorship_tag": "ABX9TyM72jbNvQSae1PLtbbZPQxb",
+      "authorship_tag": "ABX9TyMBcQdzH/CyvXY0V3ERBByY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -637,19 +637,13 @@
         "* For batches, TensorFlow like all of the tensors within a batch to be of the same size\n",
         "* Scaled (values between 0 & 1) also called normalized tensors generally perform better.\n",
         "\n",
-        "With these points in mind, we've got a few things we can tackle with a preprocessing function."
+        "With these points in mind, we've got a few things we can tackle with a preprocessing function. \n",
+        "Since we're going to be using an EfficientNetBX pretrained model from `tf.keras.applications`, we don't need to rescale our data (these architectures have rescaling built-in).\n",
+        "\n",
+        "This means our function needs to :\n",
+        "1. Reshape our images to all of the same size.\n",
+        "2. Convert the dtype of our image tensors `uint8` to `float32`"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "6oQaAA78qY5g"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -657,10 +651,80 @@
         "id": "bd-NHfOJo-FW"
       },
       "source": [
-        ""
+        "# Make a function  for preprocessing images\n",
+        "def preprocess_img(image, label, img_shape=224) :\n",
+        "  \"\"\"\n",
+        "  Converts image datatype from 'uint8' -> 'float32' and reshapes \n",
+        "  image to [img_shape, img_shape, color_channels]\n",
+        "  \"\"\"\n",
+        "  image = tf.image.resize(image, [img_shape, img_shape]) # reshape target image\n",
+        "  # image = image/255. # scale image values (not requrired with EfficientNetBX models from tf.keras.applications)\n",
+        "  return tf.cast(image, tf.float32), label # return (float32 image, label) tuple"
       ],
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LvdICp4ssAO4",
+        "outputId": "81bf6e49-4639-4f13-941b-fae4fd8bbf45",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Preprocess a single sample image and check the outputs\n",
+        "preprocessed_img = preprocess_img(image, label)[0]\n",
+        "print(f\"Image before preprocessing:\\n {image[:2]}..., \\nShape: {image.shape}, \\nDatatype: {image.dtype}\\n\")\n",
+        "print(f\"Image after preprocessing:\\n {preprocessed_img[:2]}..., \\nShape: {preprocessed_img.shape}, \\nDatatype: {preprocessed_img.dtype}\" )"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Image before preprocessing:\n",
+            " [[[71 60 56]\n",
+            "  [70 59 55]\n",
+            "  [70 59 55]\n",
+            "  ...\n",
+            "  [65 60 67]\n",
+            "  [65 60 67]\n",
+            "  [64 59 66]]\n",
+            "\n",
+            " [[62 51 47]\n",
+            "  [64 53 49]\n",
+            "  [66 55 51]\n",
+            "  ...\n",
+            "  [65 60 67]\n",
+            "  [65 60 67]\n",
+            "  [64 59 66]]]..., \n",
+            "Shape: (512, 512, 3), \n",
+            "Datatype: <dtype: 'uint8'>\n",
+            "\n",
+            "Image after preprocessing:\n",
+            " [[[ 65.811226  54.811222  50.811222]\n",
+            "  [ 73.331635  62.331635  58.331635]\n",
+            "  [104.015305  89.80102   86.80102 ]\n",
+            "  ...\n",
+            "  [ 61.85712   59.071384  65.64286 ]\n",
+            "  [ 65.        60.        67.      ]\n",
+            "  [ 64.64282   59.642822  66.64282 ]]\n",
+            "\n",
+            " [[ 67.28571   56.285717  52.285717]\n",
+            "  [ 66.47449   55.47449   51.47449 ]\n",
+            "  [ 67.73979   53.525505  50.525505]\n",
+            "  ...\n",
+            "  [ 64.14284   61.3571    67.92857 ]\n",
+            "  [ 65.93368   60.933674  67.93368 ]\n",
+            "  [ 64.285645  59.285645  66.285645]]]..., \n",
+            "Shape: (224, 224, 3), \n",
+            "Datatype: <dtype: 'float32'>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
