204. Batching and preparing our datasets (to make them run fast)

--- a/07_milestone_proj_1_food_vision_big.ipynb
+++ b/07_milestone_proj_1_food_vision_big.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "07_milestone_proj_1_food_vision_big",
       "provenance": [],
-      "authorship_tag": "ABX9TyMBcQdzH/CyvXY0V3ERBByY",
+      "authorship_tag": "ABX9TyNye6ZhCLKM5WlxQrfZUXZB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -661,17 +661,17 @@
         "  # image = image/255. # scale image values (not requrired with EfficientNetBX models from tf.keras.applications)\n",
         "  return tf.cast(image, tf.float32), label # return (float32 image, label) tuple"
       ],
-      "execution_count": 46,
+      "execution_count": 48,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LvdICp4ssAO4",
-        "outputId": "81bf6e49-4639-4f13-941b-fae4fd8bbf45",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LvdICp4ssAO4",
+        "outputId": "245c9c2b-b2b3-49ba-ba7a-a1d5ac570bfb"
       },
       "source": [
         "# Preprocess a single sample image and check the outputs\n",
@@ -679,7 +679,7 @@
         "print(f\"Image before preprocessing:\\n {image[:2]}..., \\nShape: {image.shape}, \\nDatatype: {image.dtype}\\n\")\n",
         "print(f\"Image after preprocessing:\\n {preprocessed_img[:2]}..., \\nShape: {preprocessed_img.shape}, \\nDatatype: {preprocessed_img.dtype}\" )"
       ],
-      "execution_count": 47,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -723,6 +723,68 @@
             "Datatype: <dtype: 'float32'>\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Cv4vA8V1tvei"
+      },
+      "source": [
+        "### Batch and preparing our datasets\n",
+        "\n",
+        "We're going to make our data input pipeline run really fast.\n",
+        "For more resources on this, I'd highly recommend going through the following guide : https://www.tensorflow.org/guide/data_performance\n",
+        "\n",
+        "**Best Practice Summary** : https://www.tensorflow.org/guide/data_performance#best_practice_summary "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2sIaub8Wx32D"
+      },
+      "source": [
+        "# Map preprocessing function to training(and parallelize)\n",
+        "train_data = train_data.map(map_func=preprocess_img, num_parallel_calls=tf.data.AUTOTUNE)\n",
+        "\n",
+        "# Shuffle train_data and turn it into batches and prefect it (load it faster)\n",
+        "train_data = train_data.shuffle(buffer_size=1000).batch(batch_size=32).prefetch(buffer_size=tf.data.AUTOTUNE) # set buffer size as per your memory size\n",
+        "\n",
+        "#Map preprocessing function to test data\n",
+        "test_data = test_data.map(map_func=preprocess_img, num_parallel_calls=tf.data.AUTOTUNE).batch(batch_size=32).prefetch(buffer_size=tf.data.AUTOTUNE)\n",
+        "\n"
+      ],
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0RnNoFzU2Qrt",
+        "outputId": "95e4c9b7-7f6e-404f-a6c0-57d9ead10191",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "train_data, test_data"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<PrefetchDataset shapes: ((None, 224, 224, 3), (None,)), types: (tf.float32, tf.int64)>,\n",
+              " <PrefetchDataset shapes: ((None, 224, 224, 3), (None,)), types: (tf.float32, tf.int64)>)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 51
         }
       ]
     }
